--- a/src/app.html
+++ b/src/app.html
@@ -3,6 +3,8 @@
 
 <head>
 	<meta charset="utf-8" />
+	<title>Common Credits</title>
+	<link rel="preload" href="%sveltekit.assets%/styles.css" as="style">
 	<link rel="apple-touch-icon" sizes="180x180" href="%sveltekit.assets%/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="%sveltekit.assets%/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="%sveltekit.assets%/favicon-16x16.png">
@@ -10,12 +12,15 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+	<link rel="stylesheet" href="%sveltekit.assets%/styles.css">
 	<meta name="viewport" content="width=device-width" />
 	%sveltekit.head%
 </head>
 
 <body class="d-flex flex-column h-100">
-	%sveltekit.body%
+	<div style="display: contents">
+		%sveltekit.body%
+	</div>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
 		crossorigin="anonymous"></script>
