--- a/src/app.html
+++ b/src/app.html
@@ -15,7 +15,7 @@
 		integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 	<link rel="stylesheet" href="%sveltekit.assets%/styles.css">
-	<link href="https://social.example.com/@tender_nick" rel="me">
+	<link href="https://mastodon.social/@tender_nick" rel="me">
 	<meta name="viewport" content="width=device-width" />
 	%sveltekit.head%
 </head>
